[package]
name = "katweb"
version = "0.1.0"
authors = ["kittyhacker101 <kittyhacker101@protonmail.com>"]

[dependencies]
json = "*"
futures = "*"
mime = "*"
mime_guess = "*"
mime-sniffer = "*"
lazy_static = "*"
bytes = "*"
futures-cpupool = "*"
openssl = { version = "*", features = ["vendored"] }
actix-web = { version = "*", features = ["alpn", "brotli"] }
