[package]
name = "katweb"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/kittyhacker101/KatWebX"
authors = ["kittyhacker101 <kittyhacker101@protonmail.com>"]

[dependencies]
json = "*"
futures = "*"
mime = "*"
mime_guess = "*"
mime-sniffer = "*"
lazy_static = "*"
bytes = "*"
futures-cpupool = "*"
htmlescape = "*"
number_prefix = "*"
regex = "*"
openssl = { version = "*", features = ["vendored"] }
actix-web = { version = "*", features = ["alpn", "brotli"] }

[profile.release]
lto = true
