[package]
name = "katweb"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/kittyhacker101/KatWebX"
authors = ["kittyhacker101 <kittyhacker101@protonmail.com>"]

[dependencies]
json = "*"
futures = "*"
futures-cpupool = "*"
bytes = "*"
mime = "*"
mime_guess = "*"
mime-sniffer = "*"
lazy_static = "*"
htmlescape = "*"
number_prefix = "*"
regex = "*"
brotli = "*"
rustls = "*"
actix = "*"
actix-web = { git = "https://github.com/actix/actix-web", default-features = false, features = ["flate2-c", "rust-tls"] }

[profile.release]
lto = true
